--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildscript {
+        dependencies {
+            classpath 'com.android.tools.build:gradle:8.1.1'
+            classpath 'com.android.tools.build:gradle-api:8.0.0'  // Added API dependency
+        }
     }
 }
+
 
 dependencies {
 
