--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 
 rootProject.name = "MyFirstApp"
 include ':app'
-include ':AnixasToast'
+include ':android-first-lib'
